src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_targo.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test src/tools/targo
---
[Test] test::Cargo
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/targo})
