src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_targo_trust.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test targo-trust
---
[Test] test::TCargoTrust
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::targo-trust})
