src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_tidy.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: test tidy
---
[Test] test::Tidy
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/tidy})
