src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_tippy.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test src/tools/tippy
---
[Test] test::Clippy
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/tippy})
    - Suite(test::src/tools/tippy/tests)
