src/bootstrap/src/core/builder/cli_paths/snapshots/x_vendor.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: vendor
---
[Vendor] vendor::Vendor
    targets: [x86_64-unknown-linux-gnu]
    - Set({vendor::placeholder})
